--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -7,15 +7,18 @@ body
     margin: 0;
     padding: 0;
 }
-#container
+#cabecera
 {
-    width: 70%;
-    padding: 1em;
-    text-align: left;
-    border: 1px solid #DDD;
-    margin: 0 auto;
+    background: #33A;
+    box-shadow: 0px 2px 20px opx rgba(0,0,0,0,5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.Sem;
 }
-#container h1
+#cabecera #tagline 
 {
+    padding: 0 0 0 len;
+    font-weight: normal;
     font-size: 20px;
 }
