Corrigiendo caracteres ortograficos y logo

--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -24,7 +24,7 @@ body
 }
 #cabecera #tagline 
 {
-    padding: 0 0 0 len;
+    padding: 0 0 0 1en;
     font-weight: normal;
     font-size: 0.8em;
 }
